added deploy script
npm run deploy

--- a/angular.json
+++ b/angular.json
@@ -87,7 +87,12 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+              "glob": "CNAME",
+              "input": "src",
+              "output": "./"
+              }
             ],
             "styles": [
               "src/styles.css"
