--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:ghpages": "ng build --configuration production --base-href '/'",
-    "deploy": "npm run build:ghpages && cp src/CNAME dist/stachu/CNAME && npx angular-cli-ghpages --dir=dist/stachu"
+     "build:ghpages": "ng build --configuration production --base-href /",
+      "deploy": "npm run build:ghpages && npx angular-cli-ghpages --dir=dist/stachu"
   },
   "private": true,
   "dependencies": {
